Part2/Exercise 2.03 Keep them separated/manifests/logs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: applications
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: anonymous92/log-output
        ports:
        - containerPort: 3000
