Part2/Exercise 2.03 Keep them separated/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-ingress
  namespace: applications
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /status
        pathType: Prefix
        backend:
          service:
            name: log-output-service
            port:
              number: 3000
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: ping-pong-service
            port:
              number: 3000
